Segundo commit, se actualiza un poco la estructura del html y se añade estilo para tablet y desktop

--- a/personal5.html
+++ b/personal5.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <img src="./img_personal5/logo_unicorn.jpeg" alt="Tuti's Logo (Unicorn)" title="Tuti's Logo">
-        <h1>First Tuti's Layout Shifter</h1> 
+        <h1>CRIATURAS MÁGICAS</h1> 
         <nav class="header__nav">
             <ul>
                 <li>Home</li>
@@ -26,18 +26,39 @@
     </header>
     <main class="main">
         <aside class="ain__asidem">
-            <div class="aside-d1"></div>
-            <div class="aside-d2"></div>
+            <ul>
+                <a href="https://es.wikipedia.org/wiki/Sirena"><li>Sirenas</li></a>
+                <a href="https://es.wikipedia.org/wiki/Unicornio"><li>Unicornios</li></a>
+                <a href="https://es.wikipedia.org/wiki/Duende"><li>Duendes</li></a>
+                <a href="https://es.wikipedia.org/wiki/Hada"><li>Hadas</li></a>
+            </ul>
         </aside>
         <section class="main__section1">
-            <div class="section-d1"></div>
-            <div class="section-d2"></div>
-            <div class="section-d3"></div>
-            <div class="section-d4"></div>
+            <div class="section-d1">
+                <h3>SIRENAS</h3>
+                <img class="main__section1-img" src="./img_personal5/sirena.png" alt="Imagen de Sirena">
+                <p>Hermosas mujeres con cola de pez en lugar de piernas que moran en las profundidades del oceano poseedoras de una irresistible voz melodiosa con la que atraen a los marineros locamente</p>
+            </div>
+            <div class="section-d2">
+                <h3>UNICORNIOS</h3>
+                <img class="main__section1-img" src="./img_personal5/unicornio.png" alt="Imagen de Unicornio">
+                <p>Caballos blancos con patas de antílope, ojos y pelo de cabra y un cuerno en la frente, estas criaturas habítan en los bosques.</p>
+            </div>
+            <div class="section-d3">
+                <h3>DUENDES</h3>
+                <img class="main__section1-img" src="./img_personal5/duende.png" alt="Imagen de Duende">
+                <p>Criatura con figura de viejo, cuerpo de niño que habita en algunas casas y causa en ellas trastorno y estruendo </p>
+            </div>
+            <div class="section-d4">
+                <h3>HADAS</h3>
+                <img class="main__section1-img" src="./img_personal5/hada.png" alt="Imagen de Hada">
+                <p>Criatura humanoide, con hermosas y brillantes alas, son espiritus mágicos y su función es proteger la naturaleza</p>
+            </div>
         </section>
-        <section class="main__section2">
+        
+<!----        <section class="main__section2">
             <div class="section-d1"></div>
             <div class="section-d2"></div>
     </main>
 </body>
-</html>
+</html> >
